--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="t ext/css">
     <meta charset="UTF-8">
     <title>工作助手</title>
 </head>
 <body>
-下面开始工作
+    <img alt="Avatar" class="avatar" src="{{ url_for('static', filename='78310a55b319ebc47e886b678926cffc1f17165f.jpg') }}">
+<p>下面开始工作</p>
 <ul>{% for movie in movies %}                              {# 迭代 movies 变量 #}
     <li>{{ movie.title }} - {{ movie.year }}</li>          {# 等同于 movie['title'] #}
     {% endfor %} {# 使用 endfor 标签结束 for 语句 #}
