--- a/work/templates/form.html
+++ b/work/templates/form.html
@@ -8,14 +8,14 @@
 {%from "macros.html" import form_field%}
     <form method = "post">
         {{form.csrf_token}}
-        {{fomr_field(form.subject)}}<br>
+        {{form_field(form.subject)}}<br>
 
-        {{fomr_field(form.keyword1)}}<br>
+        {{form_field(form.keyword1)}}<br>
 
-        {{fomr_field(form.keyword2)}}<br>
-        {{fomr_field(form.text)}}<br>
+        {{form_field(form.keyword2)}}<br>
+        {{form_field(form.text)}}<br>
 
-        {{fomr_field(form.submit)}}<br>
+        {{form_field(form.submit)}}<br>
 
     </form>
 
