change some css

--- a/work/static/style.css
+++ b/work/static/style.css
@@ -1,4 +1,4 @@
-/* 页面整体 */
+﻿/* 页面整体 */
 body {
     margin: auto;
     max-width: 580px;
@@ -16,25 +16,34 @@ footer {
 .avatar {
     width: 40px;
      }
+ /* 笔记 */
+.center {
+    margin: auto;
+    outline-color:red;
+    outline-width:thin;
+    width: 150%;
+   
+    padding: 3px;
+}
   /* 电影列表 */
-   .movie-list {
+.movie-list {
     list-style-type: none;
     padding: 0;
-     margin-bottom: 10px;
-      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    margin-bottom: 10px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
        }
- .movie-list li {
- padding: 12px 24px;
-  border-bottom: 1px solid #ddd;
+.movie-list li {
+    padding: 12px 24px;
+    border-bottom: 1px solid #ddd;
   }
 
-  .movie-list li:last-child {
-  border-bottom:none;
+.movie-list li:last-child {
+    border-bottom:none;
    }
 
-   .movie-list li:hover {
-   background-color: #f8f9fa; }
+.movie-list li:hover {
+    background-color: #f8f9fa; }
    /* 龙猫图片 */
-   .totoro {
+.totoro {
     display: block; margin: 0 auto; height: 100px;
     }
