--- a/work/templates/showform.html
+++ b/work/templates/showform.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
 </head>
 <body>
     {%for note in notes%}
-        <a>{{note.suject}}</a><br>
-        <a>{{note.text}}</a><br>
+        <div class="center">
+            <a>{{note.suject}}</a><br>
+            <a>{{note.text}}</a><br>
+        </div> 
     {%endfor%}
 
     <nav>
