--- a/work/templates/form.html
+++ b/work/templates/form.html
@@ -2,22 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="t ext/css">
     <title>Title</title>
 </head>
 <body>
 {%from "macros.html" import form_field%}
     <form method = "post">
         {{form.csrf_token}}
-        {{fomr_field(form.subject)}}<br>
+        {{form_field(form.subject)}}<br>
 
-        {{fomr_field(form.keyword1)}}<br>
+        {{form_field(form.keyword1)}}<br>
 
-        {{fomr_field(form.keyword2)}}<br>
-        {{fomr_field(form.text)}}<br>
+        {{form_field(form.keyword2)}}<br>
+        {{form_field(form.text,rows=5,cols=50)}}<br>
 
-        {{fomr_field(form.submit)}}<br>
+        {{form_field(form.submit)}}<br>
 
     </form>
-
+    <nav>
+            <ul>
+                <li>
+                    <a href="{{ url_for('recordform') }}">recordform</a>
+                </li> 
+            </ul> 
+        </nav>
+        <nav>
+                <ul>
+                    <li>
+                        <a href="{{ url_for('showform') }}">showform</a>
+                    </li> 
+                </ul> 
+            </nav>
 </body>
 </html>
