--- a/work/static/style.css
+++ b/work/static/style.css
@@ -1,14 +1,37 @@
 ﻿/* 页面整体 */
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
-  text-align: left;
-  background-color: #fff;
+    text-align: center;
+    background-color: #b0c4de;
+    }
+h1  {
+    font-size:400;
+    color:#020264;
+
+     }
+div {
+    background-color:e0ffff; 
+    }
+
+table, td, th {
+    botder:1px solid green;
+    }
+
+th  {
+    backgroud-color:green;
+    color:white;
+    }
+
+td  {
+    color:#000000;
+    background-color:#EAF2D3;
+    }
+
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 [tabindex="-1"]:focus {
