--- a/work/templates/showform.html
+++ b/work/templates/showform.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title></title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
 </head>
 <body>
+    <h1>工作情况</h>
     {%for note in notes%}
-        <div class="center">
-            <a>{{note.suject}}</a><br>
-            <a>{{note.text}}</a><br>
+	 <div class="center">
+            <a href="{{ url_for('editform',note_id=note.id)}}">{{note.subject}}</a><br>
+            <a href="{{ url_for('editform',note_id=note.id)}}">{{note.text}}</a><br>
+            {%from "macros.html" import form_field%}
+                 <form method = "post" action="{{url_for("deleteform", note_id=note.id)}}"}>
+                      {{form.csrf_token}}
+                      {{form_field(form.delete)}}<br>
+                 </form>
         </div> 
     {%endfor%}
 
