--- a/work/templates/editform.html
+++ b/work/templates/editform.html
@@ -1,34 +1,31 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>编辑页</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
-</head>
-<body>
+{% extends 'base.html' %}
+{% from 'macros.html' import form_field %}
+
+{% block title %}
+    <h1>编 辑 页</h1>
+{% endblock %}
+
+{% block content %}
     <h1> 编辑页</h1>
-        {%from "macros.html" import form_field%}
-            <form method = "post">
+        <form method = "post">
                 {{form.csrf_token}}
                 {{form_field(form.subject)}}<br>
                 {{form_field(form.keyword1)}}<br>
                 {{form_field(form.keyword2)}}<br>
                 {{form_field(form.text,rows=5,cols=50)}}<br>
                 {{form_field(form.update)}}<br>
-            </form>
+        </form>
+ {% endblock %}
+
+{% block link %}
     <nav>
         <ul>
             <li>
                 <a href="{{ url_for('recordform') }}">recordform</a>
-            </li> 
-        </ul> 
+                <a href="{{ url_for('showform') }}">showform</a>
+            </li>
+        </ul>
     </nav>
-    <nav>
-            <ul>
-                <li>
-                    <a href="{{ url_for('showform') }}">showform</a>
-                </li> 
-            </ul> 
-        </nav>
+{% endblock %}
 </body>
 </html>
