--- a/work/templates/base.html
+++ b/work/templates/base.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
@@ -6,18 +6,41 @@
     <title>工作助手</title>
 </head>
 <body>
-      {% block title %}
-          <p>1</p>
-      {% endblock %}
-      {% block content %}
-          <p>2</p>
-      {% endblock %}
+    <div class="column side">
+        <div>
+            <p></p>
+        </div>
+    </div>
 
-      {% block mark %}
-          <p>3</p>
-      {% endblock %}
-      {% block link %}
-          <p>4</p>
-      {% endblock %}
+    <div class="column middle">
+        <div>
+             {% block title %}
+                  <p  class="backgound-color：green">1</p>
+             {% endblock %}
+        </div>
+
+        <div>
+             {% block content %}
+                  <p class="">2</p>
+             {% endblock %}
+
+             {% block mark %}
+                  <p class=""></p>
+              {% endblock %}
+        </div>
+
+        <div>
+            {% block link %}
+            <p class="">4</p>
+            {% endblock %}
+        </div>
+    </div>
+    <div class="column side">
+          <div>
+            <p></p>
+        </div>
+    </div>
+
+
 </body>
 </html>
