--- a/work/static/style.css
+++ b/work/static/style.css
@@ -1,35 +1,131 @@
-﻿/* 页面整体 */
+/* 标题 */
+.back {
+    color:#8AC007；
+    font-size:200px;
+    font-family:"sans-serif";
+    text-align:center;
+    margin-top:50px;
+    margin-bottom:50px;
+    border-radius:8px;
+    border:2px solid #dddddd;
+    background-color:#f1f1f1;
+    padding:20px;
+    }
+.button {
 
-body {
-    background-color: #b0c4de;
-    width：500px；
+    }
+.column {
+  float: left;
+}
+
+/* 左右两侧宽度 */
+.column.side {
+  width:25%;
+  }
+
+/* 中间区域宽度 */
+.column.middle {
+  width: 50%;
+}
+
+.alignleft {
+    text-align:left;
+    border:10px,solid,red;
+    background-color:#f2f2f2;
+    text-decoration:none;
+    border-radius:10px;
+    padding:10px;
+    margin-bottom:10px;
+
     }
 
-h1  {
+input[type=text],select {
+    width:50%;
+    padding:12px 20px;
+    margin:8px 0;
+    display:inline-block;
+    border:1px solid #ccc;
+    border-radius:6px;
+    box-sizing:border-box;
+    text-align:center;
+    }
+input[type=save] {
+    width：50%；
+    background-color:#4CAF50；
+    color:white;
+    padding:14px 20px;
+    margin:8px 0;
+    border:none;
+    border-radius:4px;
+    cursor:pointer;
+    }
+.aligncenter {
+    text-align:center;
+    }
+
+
+.tex {
+    font-size:100;
+    color:#1267df;
+    tex-align:center;
+    }
+
+.body {
+    background-color: #DDDDDD;
+    border-color:red;
+    outline-color:outline:green dotted thick;
+    margin:10px;
+    padding: 10px;
+    height=150px;
+   }
+.p{
+    text-align:center;
+    background-color:green;
+    color：red;
+}
+
+.h1 {
     height:80px;
     font-size:60px;
     color:#020264;
-    text-aligh:center;
+    background-color:#DDDDDD;
      }
 
-div  {
-      width:400px;
-      text-align:center;
-      backgrond-color:green;
+.div {
+    text-align:left;
+     }
+
+.formtitle {
+    text—align:center;
     }
 
-
-.block  {
-     width:1500px;
-     background-color:e0ffff; 
+.formtext {
+    text-align:center;
     }
-
-
-a  {
-    left:100px;
+b {
     font-size:20px;
     color:black;
-
     }
 
+.a{
+    tex-decoration:none;
+    }
 
+.button {
+    background-color:#f2f2f2;
+    text-align:center;
+    text-decoration:none;
+    margin-right:5px;
+    }
+
+.button1 {
+    background-color:#f2f2f2;
+    border:2px,solid,#dddddd;
+    text-align:center;
+    text-decoration:none;
+    margin-right:5px;
+    }
+
+.marginright {
+    margin-right:10px;
+    }
