--- a/work/templates/recordform.html
+++ b/work/templates/recordform.html
@@ -22,10 +22,10 @@
     <nav>
         <ul>
             <li>
-                <a href="{{ url_for('recordform') }}">recordform</a>
+                <a href="{{ url_for('recordform') }}">recordform&#8629;</a>
             </li>
             <li>
-                <a href="{{ url_for('showform') }}">showform</a>
+                <a href="{{ url_for('showform') }}">showform&#8629;</a>
             </li>
         </ul>
     </nav>
