--- a/work/templates/showform.html
+++ b/work/templates/showform.html
@@ -9,14 +9,14 @@
      {%for note in notes%}
 	     <div class="alignleft">
              <a class="a" href="{{ url_for('editform',note_id=note.id)}}">
-                 <span class="button">主题：</span>
+                 <span class="button">主题:</span>
                  <span class="marginright">{{note.subject}}</span>
-                 <span class="button">关键词：</span>
+                 <span class="button">关键词:</span>
                  <span class="marginright">{{note.keyword1}}</span>
-                 <span class="button">时间：</span>
+                 <span class="button">时间:</span>
                  <span class="marginright">{{note.keyword2}}</span>
              </a><br>
-             <a class="a" href="{{ url_for('editform',note_id=note.id)}}"><b>内容：</b>{{note.text}}</a><br>
+             <a class="a" href="{{ url_for('editform',note_id=note.id)}}">内容:{{note.text}}</a><br>
              {%from "macros.html" import form_field%}
              <form method = "post" action="{{url_for("deleteform", note_id=note.id)}}"}>
                  <a class="a" href="{{ url_for('editform',note_id=note.id)}}">
@@ -32,10 +32,10 @@
     <nav>
         <ul>
             <li>
-                <a href="{{ url_for('recordform') }}">recordform</a>
+                <a href="{{ url_for('recordform') }}">recordform&#8629;</a>
             </li>
             <li>
-                <a href="{{ url_for('showform') }}">showform</a>
+                <a href="{{ url_for('showform') }}">showform&#8629;</a>
             </li>
         </ul>
     </nav>
