change data base code

--- a/work/templates/base.html
+++ b/work/templates/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
@@ -8,7 +8,7 @@
 <body>
     <div class="column side">
         <div>
-            <p></p>
+            <p>zuo</p>
         </div>
     </div>
 
@@ -37,7 +37,7 @@
     </div>
     <div class="column side">
           <div>
-            <p></p>
+            <p>you</p>
         </div>
     </div>
 
