--- a/work/templates/showform.html
+++ b/work/templates/showform.html
@@ -8,23 +8,22 @@
 {% block content %}
      {%for note in notes%}
 	     <div class="alignleft">
-             <a class="a" href="{{ url_for('editform',note_id=note.id)}}">
-                 <span class="button">主题:</span>
-                 <span class="marginright">{{note.subject}}</span>
-                 <span class="button">关键词:</span>
-                 <span class="marginright">{{note.keyword1}}</span>
-                 <span class="button">时间:</span>
-                 <span class="marginright">{{note.keyword2}}</span>
-             </a><br>
-             <a class="a" href="{{ url_for('editform',note_id=note.id)}}">内容:{{note.text}}</a><br>
-             {%from "macros.html" import form_field%}
-             <form method = "post" action="{{url_for("deleteform", note_id=note.id)}}"}>
-                 <a class="a" href="{{ url_for('editform',note_id=note.id)}}">
-                     <small class="button1">编辑</small>
-                 </a>{{form.csrf_token}}
-                 {{form.delete}}<br>
-             </form>
-        </div> 
+                 <a class="a" href="{{ url_for("editform",note_id=note.id)}}">
+                     <span class="button">主题:</span>
+                     <span class="keyword">{{note.subject}}</span>
+                     <span class="button">关键词:</span>
+                     <span class="keyword">{{note.keyword1}}</span>
+                     <span class="button">时间:</span>
+                     <span class="keyword">{{note.keyword2}}</span>
+                 </a><br>
+                     <p class="text"><a class="content" href="{{ url_for("editform",note_id=note.id)}}">内容:{{note.text}}</a></p>
+                 <form method = "post" action="{{url_for("deleteform", note_id=note.id)}}"}>
+                     <a class="a" href="{{ url_for('editform',note_id=note.id)}}">
+                         <small class="button1">编辑</small>
+                     </a>{{form.csrf_token}}
+                     {{form.delete}}<br>
+                 </form>
+             </div> 
     {%endfor%}
   {% endblock %}
 
