--- a/work/static/style.css
+++ b/work/static/style.css
@@ -1,20 +1,4 @@
-﻿/* 标题 */
-h1 {
-    color:#ffcccc；
-    font-size:200px;
-    font-family:"sans-serif";
-    text-align:center;
-    margin-top:50px;
-    margin-bottom:50px;
-    border-radius:8px;
-    border:2px solid #dddddd;
-    background-color:#f1f1f1;
-    padding:20px;
-    }
-.button {
-
-    }
-.column {
+﻿.column {
   float: left;
 }
 
@@ -28,16 +12,72 @@ h1 {
   width: 50%;
 }
 
+/* 标题 */
+h1 {
+    color:#33ffcc；
+    font-size:80px;
+    font-family:"黑体";
+    text-align:center;
+    margin-top:50px;
+    margin-bottom:50px;
+    border-radius:8px;
+    background-color:#e1e1e1;
+    padding:20px;
+    }
+
 .alignleft {
     text-align:left;
     border:10px,solid,red;
-    background-color:#f2f2f2;
+    background-color:#c2c2c2;
     text-decoration:none;
-    border-radius:10px;
-    padding:10px;
-    margin-bottom:10px;
-
+    border-radius:8px;
+    margin-bottom:20px;
+    padding-top:10px;
+    padding-left:8px;
+    padding-right:8px;
+    padding-bottom:8px;
+    
     }
+
+.button {
+    color:#000000;
+    font-family:"楷体";
+    font-size:18px;
+    margin-bottom:20px;
+    padding-bottom:8px；
+    height:50px;
+    }
+
+.keyword {
+    color:#000000;
+    font-family:"楷体";
+    font-size:18px;
+    magrin-left:50px;
+    margin-right:20px;
+    margin-bottom:20px;
+    padding-bottom:8px
+    }
+
+.text {
+    heiht:100px;
+    margin-top:5px;
+    color:#000000；
+    width:100%;
+    border-style:solid;
+    border-width:1px;
+    border-color:#red;
+    border:2px,solid,#dddddd;
+    magrin-top:10px;
+    margin-right:5px;
+    background-color:#ffffff;
+    }
+
+.content {
+    text-align:center;
+    text-decoration:none;
+
+
+
 
 input[type=text],select {
     width:50%;
@@ -67,7 +107,7 @@ input[type=save] {
 
 
 .tex {
-    font-size:100;
+    font-size:100px;
     color:#1267df;
     tex-align:center;
     }
@@ -111,39 +151,27 @@ b {
     }
 
 a:link {text-decoration:none;
-    background-color:#dddddd;
+    color:#000000;
     }
 
 a:visited {text-decoration:none;
-    background-color:#dddddd;
+    color:#333333;
     }
 
 a:hover {text-decoration:none;
-    background-color:#dddddd;
+   color:#333333;
     }
 
 a:active {text-decoration:none;
-    background-color:#dddddd;
+   color:#ffffff;
     }
 
-.button {
-    background-color:#f2f2f2;
-    text-align:center;
-    text-decoration:none;
-    margin-right:5px;
-    }
 
-.button1 {
-    background-color:#f2f2f2;
-    border:2px,solid,#dddddd;
-    text-align:center;
-    text-decoration:none;
-    margin-right:5px;
-    }
 
 .marginright {
     margin-right:10px;
     }
+
 li {
     color:green;
     }
