--- a/work/static/style.css
+++ b/work/static/style.css
@@ -19,31 +19,54 @@ h1 {
     font-family:"黑体";
     text-align:center;
     margin-top:50px;
-    margin-bottom:50px;
-    border-radius:8px;
-    background-color:#e1e1e1;
+    margin-bottom:30px;
+
     padding:20px;
+    border-radius:4px;
     }
+
+
+
+a:link {text-decoration:none;
+    color:#000000;
+    }
+
+a:visited {text-decoration:none;
+    color:#333333;
+    }
+
+a:hover {text-decoration:none;
+   color:#777777;
+    }
+
+a:active {text-decoration:none;
+   color:#ffffff;
+    }
+
+.a  {
+    margin-top:10px;
+    margin-bottom:18px;
+    }
+    
 
 .alignleft {
     text-align:left;
     border:10px,solid,red;
-    background-color:#c2c2c2;
+    background-color:#dddddd;
     text-decoration:none;
     border-radius:8px;
     margin-bottom:20px;
     padding-top:10px;
-    padding-left:8px;
-    padding-right:8px;
-    padding-bottom:8px;
+    padding-left:15px;
+    padding-right:12px;
+    padding-bottom:10px;
     
     }
 
 .button {
     color:#000000;
     font-family:"楷体";
-    font-size:18px;
-    margin-bottom:20px;
+    font-size:20px;
     padding-bottom:8px；
     height:50px;
     }
@@ -54,27 +77,49 @@ h1 {
     font-size:18px;
     magrin-left:50px;
     margin-right:20px;
-    margin-bottom:20px;
-    padding-bottom:8px
+    padding-bottom:8px；
+    text-decoration:none;
     }
 
+.button1 {
+    border:1px,solid,#dddddd;
+    color:#000000;
+    font-family:"楷体";
+    font-size:14px;
+    padding-bottom:8px；
+    height:50px;
+    margin-left:50px;  
+    margin-right:100px;
+    }
+
+
 .text {
-    heiht:100px;
+    magrin-top:100px;
+    margin-right:10px;
+    padding-bottom:10px;
+    padding-top:10px;
+    font-size:18px;
+    line-height:200%;
+
+    border-radius:5px;
     margin-top:5px;
     color:#000000；
-    width:100%;
     border-style:solid;
     border-width:1px;
-    border-color:#red;
-    border:2px,solid,#dddddd;
-    magrin-top:10px;
-    margin-right:5px;
+    border-color:#cccccc;
     background-color:#ffffff;
+ 
     }
 
 .content {
+    marigin-top:20px;
     text-align:center;
     text-decoration:none;
+    padding-top:20px；
+    padding-bottom:20px;
+    font-family:"仿宋";
+    line-heigt:5px;
+    }
 
 
 
@@ -149,23 +194,6 @@ b {
     font-size:20px;
     color:black;
     }
-
-a:link {text-decoration:none;
-    color:#000000;
-    }
-
-a:visited {text-decoration:none;
-    color:#333333;
-    }
-
-a:hover {text-decoration:none;
-   color:#333333;
-    }
-
-a:active {text-decoration:none;
-   color:#ffffff;
-    }
-
 
 
 .marginright {
