--- a/work/static/style.css
+++ b/work/static/style.css
@@ -12,15 +12,15 @@
   width: 50%;
 }
 
-/* 标题 */
-h1 {
-    color:#33ffcc；
-    font-size:80px;
+/* 标题颜色 */
+.head {
+    color:#11bb77;
+    font-size:50px;
     font-family:"黑体";
     text-align:center;
     margin-top:50px;
     margin-bottom:30px;
-
+    background:#f2e7ca;
     padding:20px;
     border-radius:4px;
     }
@@ -28,7 +28,7 @@ h1 {
 
 
 a:link {text-decoration:none;
-    color:#000000;
+    color:#11bb77;
     }
 
 a:visited {text-decoration:none;
@@ -36,7 +36,7 @@ a:visited {text-decoration:none;
     }
 
 a:hover {text-decoration:none;
-   color:#777777;
+   color:#119977;
     }
 
 a:active {text-decoration:none;
@@ -52,7 +52,7 @@ a:active {text-decoration:none;
 .alignleft {
     text-align:left;
     border:10px,solid,red;
-    background-color:#dddddd;
+    background-color:#f2e7ca;
     text-decoration:none;
     border-radius:8px;
     margin-bottom:20px;
@@ -65,20 +65,22 @@ a:active {text-decoration:none;
 
 .button {
     color:#000000;
-    font-family:"楷体";
+    font-family:"Microsoft YaHei";
     font-size:20px;
     padding-bottom:8px；
     height:50px;
+    letter-spacing:2px;
     }
 
 .keyword {
-    color:#000000;
-    font-family:"楷体";
+    color:#11bb77;
+    font-family:"Microsoft YaHei";
     font-size:18px;
     magrin-left:50px;
     margin-right:20px;
     padding-bottom:8px；
     text-decoration:none;
+    letter-spacing:2px;
     }
 
 .button1 {
@@ -171,12 +173,6 @@ input[type=save] {
     color：red;
 }
 
-.h1 {
-    height:80px;
-    font-size:60px;
-    color:#020264;
-    background-color:#DDDDDD;
-     }
 
 .div {
     text-align:left;
