--- a/work/templates/showform.html
+++ b/work/templates/showform.html
@@ -8,25 +8,27 @@
 {% block content %}
      {%for note in notes%}
 	     <div class="alignleft">
-                         <div class="a" href="{{ url_for("editform",note_id=note.id)}}">
-                     <a class="button">主题</span>
-                     <a class="keyword">{{note.subject}}</span>
-                     <a class="button">关键词</span>
-                     <a class="keyword">{{note.keyword1}}</span>
-                     <a class="button">时间</span>
-                     <a class="keyword">{{note.keyword2}}</span>
-                         </div>
-                     <p class="text">
-                                  <a class="content" href="{{ url_for("editform",note_id=note.id)}}">内容:{{note.text}}</a>
-                      </p>
-                 <form method = "post" action="{{url_for("deleteform", note_id=note.id)}}"}>
-                       <div  >
-                            <a class="a" href="{{ url_for('editform',note_id=note.id)}}">
-                             <small  class="button1">编辑</small>
-                           </a>{{form.csrf_token}}
-                           {{form.delete}}<br>
-                      </div>
-                 </form>
+                   <div>
+                      <span class="button">主题</span>
+                      <a href="{{ url_for("editform",note_id=note.id)}}" class="key">{{note.subject}}</span>
+                      <span class="button">关键词</span>
+                      <a href="{{ url_for("editform",note_id=note.id)}}" class="key">{{note.keyword1}}</span>
+                      <span class="button">时间</span>
+                      <a href="{{ url_for("editform",note_id=note.id)}}" class="key">{{note.keyword2}}</span>
+                   </div>
+                   <p class="text">
+                      <a class="content" href="{{ url_for("editform",note_id=note.id)}}">内容:{{note.text}}</a>
+                   </p>
+                   <div>
+                        <form method = "post" action="{{url_for("deleteform", note_id=note.id)}}"}>
+                           <span>
+                               <a class="edit" href="{{ url_for('editform',note_id=note.id)}}"><small>编辑</small></a>
+                          </span>
+                       <span>{{form.csrf_token}}</span>
+                       <span>{{form.delete(class_="edit")}}</span>
+                     
+                           </form>
+                   </div>
              </div> 
     {%endfor%}
   {% endblock %}
@@ -35,10 +37,10 @@
     <nav>
         <ul>
             <li>
-                <a href="{{ url_for('recordform') }}">recordform&#8629;</a>
+                <a class="bottom" href="{{ url_for('recordform') }}">recordform&#8629;</a>
             </li>
             <li>
-                <a href="{{ url_for('showform') }}">showform&#8629;</a>
+                <a class="bottom" href="{{ url_for('showform') }}">showform&#8629;</a>
             </li>
         </ul>
     </nav>
