--- a/work/static/style.css
+++ b/work/static/style.css
@@ -1,34 +1,34 @@
-﻿.column {
-  float: left;
+﻿*{
+    magin:0;
+    padding: 0;
+}
+body{
+    width:1500px;
+    margin:auto;
+}
+.column {
+    width:900px;
+    margin:auto;
 }
 
-/* 左右两侧宽度 */
-.column.side {
-  width:25%;
-  }
-
-/* 中间区域宽度 */
-.column.middle {
-  width: 50%;
-}
 
 /* 标题颜色 */
 .head {
-    color:#ffffff;
+    color:white;
     font-size:50px;
-    font-family:"黑体";
+    font-family: "黑体";
     text-align:center;
     margin-top:50px;
     margin-bottom:30px;
-    background-color:#455A64;
+    background-color:#0097A7;
     padding:20px;
     border-radius:4px;
     }
 
 a.key:link {
     text-decoration:none;
-    color:#FFFD8FC;
-    font-family:"Microsoft YaHei";
+    color:darkgreen;
+    font-family:"楷体";
     font-size:18px;
     magrin-left:50px;
     margin-right:20px;
@@ -39,7 +39,7 @@ a.key:link {
 
 a.key:visited {
     text-decoration:none;
-    color:#CFD8DC;
+    color:green;
     }
 
 a.key:hover {
@@ -57,6 +57,7 @@ a.key:active {
 a.content:link {
     text-decoration:none;
     color:#000000;
+    font-family:"FangSong";
     }
 
 a.content:visited {
@@ -79,8 +80,8 @@ a.edit:link {
     color:#CFD8DC;
     padding-left:10px;
     padding-right:10px;
-    font-family:"仿宋";
-    font-size:18px;
+    font-family:"楷体";
+    font-size:16px;
     background-color:#009688;
     border-style:outset;
     border-radius:2px;
@@ -116,7 +117,7 @@ a.edit:active {
     padding-right:10px;
     color:#ffffff;
     font-family:"楷体";
-    font-size:18px;
+    font-size:16px;
     background-color:#009688;
     border-radius:2px;
     margin-left:10px;
@@ -155,11 +156,11 @@ a.bottom:active {
 
 .alignleft {
     text-align:left;
-    background-color:#607D8B;
+    background-color:#FFFFFF;
     text-decoration:none;
     border-radius:8px;
-    margin-bottom:20px;
-    padding-top:5px;
+    margin-bottom:5px;
+    padding-top:2px;
     padding-left:15px;
     padding-right:12px;
     padding-bottom:5px;
